RESOLVED FIXED137524
[Win] Resolve warnings about missing __has_include macro under MSVC
https://bugs.webkit.org/show_bug.cgi?id=137524
Summary [Win] Resolve warnings about missing __has_include macro under MSVC
Brent Fulgham
Reported 2014-10-08 10:07:00 PDT
MSVC does not provide support for he __has_include annotation. This causes hundreds of build warnings in each project that uses the SimpleFontData.h header file. This patch provides a dummy __has_include that silences this warning without changing the build behavior under MSVC.
Attachments
Patch (1.02 KB, patch)
2014-10-08 10:08 PDT, Brent Fulgham
andersca: review+
Brent Fulgham
Comment 1 2014-10-08 10:08:21 PDT
Brent Fulgham
Comment 2 2014-10-08 10:56:52 PDT
Note You need to log in before you can comment on or make changes to this bug.