[Win] Resolve warnings about missing __has_include macro under MSVC https://bugs.webkit.org/show_bug.cgi?id=137524

Reviewed by Anders Carlsson.

* wtf/Compiler.h: Provide a dummy implementation of __has_include that
avoids the warning without changing compile behavior.


Canonical link: https://commits.webkit.org/155344@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174462 268f45cc-cd09-0410-ab3c-d52691b4dbfc